# ddcci-plasmoid

./: .gitignore  LICENSE  README.md  detect_mock.json
.github/workflows/: tests.yml
backend/: .coveragerc  README.md  pyproject.toml  tox.ini
backend/ddcci_plasmoid_backend/: Node.py  Node_test.py  __init__.py  __main__.py  cache.py  config.py  config_test.py  conftest.py  ddcci.py  ddcci_test.py  ddcutil_parser.py  default_options.py  errors.py  subprocess.py  subprocess_test.py  subprocess_wrapper.py  subprocess_wrapper_test.py  subprocess_wrappers.py  subprocess_wrappers_test.py  tree.py  tree_test.py
backend/ddcci_plasmoid_backend/adapters/: DdcciAdapter.py  DdcciAdapter_test.py  Monitor.py  MonitorAdapter.py  TestAdapter.py  adapters.py  adapters_test.py  conftest.py  ddcci_adapter.py  ddcci_adapter_test.py  monitor_adapter.py
backend/ddcci_plasmoid_backend/adapters/ddcci/: DdcciMonitor.py  SerialNumbers.py  SerialNumbers_test.py  __init__.py  conftest.py  ddcutil_wrapper.py  ddcutil_wrapper_test.py  detect.py  detect_test.py  serial_numbers.py  serial_numbers_test.py
backend/fixtures/: basic.txt  ddcutil.txt
backend/fixtures/detect/#1-wrong-duplicates/: input.txt  output.json  vcp.json
backend/fixtures/detect/#32-nvidia-error-messages/: detect.txt  input.txt  output.json  vcp.json
backend/fixtures/detect/#39-vcp-version-failed/: detect.txt  output.json  vcp.json
backend/fixtures/detect/#49-ddcutil-error-messages/: detect.txt  output.json  vcp.json
backend/fixtures/detect/duplicate/: input.txt  output.json
backend/fixtures/detect/duplicate-binary-serial-numbers/: input.txt  output.json
backend/fixtures/detect/duplicate-serial-numbers/: input.txt  output.json  vcp.json
backend/fixtures/detect/invalid-display-error/: detect.txt  output.json  vcp.json
backend/fixtures/detect/missing-serial-numbers/: input.txt  output.json  vcp.json
backend/fixtures/detect/simple/: detect.txt  output.json  vcp.json
backend/sample-output/: detect.txt
plasmoid/: metadata.json
plasmoid/contents/config/: config.qml  configGeneral.qml  main.xml
plasmoid/contents/locale/de/LC_MESSAGES/: plasma_applet_de.davidhi.ddcci-brightness.mo
plasmoid/contents/locale/zh_CN/LC_MESSAGES/: plasma_applet_de.davidhi.ddcci-brightness.mo
plasmoid/contents/ui/: AdvancedMonitorItem.qml  ContinuousFeatureSlider.qml  HorizontalLine.qml  ShellDataSource.qml  SimpleMonitorItem.qml  configGeneral.qml  main.qml
plasmoid/contents/ui/code/: backend_interface.js  util.js
plasmoid/contents/ui/config/: ExplainedConfigItem.qml  ddcci.qml  general.qml
plasmoid/translate/: ReadMe.md  build  de.po  merge  nl.po  template.pot  zh_CN.po
