[tool.poetry]
name = "ddcci-plasmoid-backend"
version = "0.1.9"
description = "Backend for ddcci-plasmoid"
authors = ["David Himmelstoß <77309510+davidhi7@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidhi7/ddcci-plasmoid"
keywords = ["ddcci", "brightmess", "widget", "kde", "plasma"]
classifiers = [
    "Topic :: Desktop Environment :: K Desktop Environment (KDE)",
    "Environment :: X11 Applications :: KDE",
    "Topic :: System :: Hardware"
]
packages = [{include = "ddcci_plasmoid_backend"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
fasteners = "^0.18"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"
tox = "^4.6.4"
ruff = "^0.0.277"

[tool.poetry.scripts]
ddcci_plasmoid_backend = "ddcci_plasmoid_backend.__main__:main"

[tool.pytest.ini_options]
python_files = "*_test.py"
python_functions = "test_*"
addopts = "--pyargs ddcci_plasmoid_backend"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py38"
select = [
	# pycodestyle
	"E",
	"W",
	# pyflakes
	"F",
	# pyupgrade
	# Use modern Python features for the best possible develop experience.
	"UP",
	# flake8-bugbear
	# Find obvious bugs.
	"B",
	# flake8-pie
	"PIE",
	# flake8-return
	"RET",
	# pep8-naming
	"N",
	# flake8-simplify
	"SIM",
]
ignore = [
	# Line too long
	"E501",
]

